--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/toolbar/toolbar.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/toolbar/toolbar.css
@@ -8,24 +8,46 @@
  * Contributors:
  *   Codenvy, S.A. - initial API and implementation
  *******************************************************************************/
+@external .blueColored, .greenColored, .changeOnHover;
+@eval greenIconColor org.eclipse.che.ide.api.theme.Style.getSuccessEventColor();
 
 .toolbarPanel {
     width: 100%;
     height: 100%;
-    overflow: hidden;
     cursor: default;
-    background-color: toolbarBackgroundColor;
-    background-image: toolbarBackgroundImage;
+    overflow: hidden;
+    text-align: center;
     box-sizing: border-box;
     border-top: 1px solid tabBorder;
     border-bottom: 1px solid tabBorder;
+    background-color: toolbarBackgroundColor;
+    background-image: toolbarBackgroundImage;
 }
 
-.toolbarPanel > div {
-    text-shadow: 0 1px 0 buttonTextShadow;
+.leftToolbarPart,
+.centerToolbarPart,
+.rightToolbarPart {
     height: inherit;
+    font-size: fontSize;
+    display: inline-flex;
+    text-shadow: 0 1px 0 buttonTextShadow;
+}
+
+.leftToolbarPart {
     float: left;
-    display: flex;
+}
+
+.rightToolbarPart {
+    float: right;
+}
+
+.leftToolbarPart .toolbarActionGroupPanel,
+.centerToolbarPart .toolbarActionGroupPanel {
+    margin: auto 0 auto 14px;
+}
+
+.rightToolbarPart .toolbarActionGroupPanel {
+    margin: auto 14px auto 0;
 }
 
 .toolbarPanel a {
@@ -49,8 +71,8 @@
     background-color: toolbarActionGroupBackgroundColor;
     border: 1px solid toolbarActionGroupBorderColor;
     border-radius: 3px;
-    margin: auto 14px auto 14px;
     display: inherit;
+    line-height: 22px;
     height: 22px;
 }
 
@@ -62,6 +84,14 @@
     fill: toolbarHoverIconColor;
 }
 
+.toolbarActionGroupPanel > div > svg .blueColored {
+    fill: blueIconColor;
+}
+
+.toolbarActionGroupPanel > div:hover > svg .changeOnHover.greenColored {
+    fill: greenIconColor;
+}
+
 .toolbarPanel svg.iconButtonIcon {
     width: 18px;
     height: 18px;
@@ -71,10 +101,6 @@
 .toolbarPanel > div > div {
     display: inherit;
     height: inherit;
-}
-
-.rightPanel {
-    float: right !important;
 }
 
 .toolbarPanel .iconButtonPanel,
@@ -142,18 +168,8 @@
     margin: inherit;
 }
 
-.iconButtonPanelDown {
-    border-radius: 4px;
-    border: 1px solid tabBorder;
-    background-color: hoverBackgroundColor;
-}
-
-.iconButtonPanelSelected {
-    border-radius: 4px;
-    border: 1px solid tabBorder;
-    background-color: hoverBackgroundColor;
-}
-
+.iconButtonPanelDown,
+.iconButtonPanelSelected,
 .iconButtonPanelSelectedDown {
     border-radius: 4px;
     border: 1px solid tabBorder;
@@ -185,7 +201,7 @@ svg.iconButtonIcon {
 }
 
 .popupButtonPanel {
-    background-position: 0px 0px;
+    background-position: 0 0;
 }
 
 .popupButtonPanelDown {
