--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/smartTree/TreeStyles.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/smartTree/TreeStyles.css
@@ -95,6 +95,8 @@
     min-width: 100%;
     font-size: 0.85em;
     font-weight: bold;
+    overflow-x: scroll;
+    overflow-y: scroll;
 }
 
 .loading {
