IDEX-2864: adopt new styles on main menu.

--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/menu/menu.css
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/menu/menu.css
@@ -22,23 +22,21 @@
 .menuBarItemOver,
 .menuBarItemSelected,
 .menuBarItemDisabled {
-    height: 21px;
+    height: 24px;
+    box-sizing: border-box;
 }
 
 .menuBarItem,
 .menuBarItemOver,
 .menuBarItemSelected,
 .menuBarItemDisabled {
-    padding-top: 1px;
-    padding-left: 12px;
-    padding-right: 12px;
+    padding: 0px 15px;
     cursor: default;
     font-family: mainFontFamily;
     font-size: fontMenuSize;
     font-weight: normal;
     font-style: normal;
     vertical-align: middle;
-    text-shadow: 0 1px 0px rgba(0, 0, 0, 1);
 }
 
 .menuBar {
@@ -52,16 +50,14 @@
 
 .menuBarItem:HOVER,
 .menuBarItemOver:HOVER {
-    box-shadow: inset 0px -3px 0px -1px #49a2e6;
-    background-color: #525252;
+    color: mainMenuFontHoverColor;
+    cursor: pointer;
 }
 
 .menuBarItemSelected {
-    background-color: #545454;
-    box-shadow: inset -2px 0px 0px -1px #242424,
-    inset 2px 0px 0px -1px #242424,
-    inset 0px 2px 0px -1px #242424,
-    inset 0px -3px 0px -1px #49a2e6;
+    background-color: mainMenuSelectedBkgColor;
+    color: mainMenuFontSelectedColor;
+    box-shadow: inset 0 0 0 1px mainMenuSelectedBorderColor;
 }
 
 .menuBarItemDisabled {
