--- a/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/ui/style.css
+++ b/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/ui/style.css
@@ -94,7 +94,7 @@
 @eval editorSelectionColor org.eclipse.che.ide.api.theme.Style.getEditorSelectionColor();
 @eval editorInactiveSelectionColor org.eclipse.che.ide.api.theme.Style.getEditorInactiveSelectionColor();
 
-@eval editoGutterColor org.eclipse.che.ide.api.theme.Style.getEditorGutterColor();
+@eval editorGutterColor org.eclipse.che.ide.api.theme.Style.getEditorGutterColor();
 @eval editorGutterLineNumberColor org.eclipse.che.ide.api.theme.Style.getEditorLineNumberColor();
 @eval editorGutterSeparatorColor org.eclipse.che.ide.api.theme.Style.getEditorSeparatorColor();
 
@@ -125,6 +125,7 @@
 @def splitterWidth 8px;
 @def splitterOverlap 4px;
 @def toolbarIconSize 16px;
+@def menuIconSize 12px;
 
 /* Font Sizes */
 @def fontSize 13px;
@@ -143,15 +144,26 @@
 @def alternativeFontFamily "Helvetica Neue", "Myriad Pro","open sans", arial, sans-serif;
 @def fileTreeFontFamily "Helvetica Neue", "Myriad Pro","Lucida Grande", Verdana, Arial;
 @def fileTreeFontFamilyFile "Helvetica Neue Regular", "Myriad Pro","Lucida Grande", Verdana, Arial;
-@def mainFontFamily "Helvetica Neue", "Myriad Pro", arial, Verdana, Verdana, sans-serif;
+@def mainFontFamily "Lucida Grande", "Myriad Pro", arial, Verdana, Verdana, sans-serif;
 @def editorLineHeight 15px;
 @def editorFontFamily 'Andale Mono', monospace;
 @def outputFontFamily 'Droid Sans Mono', monospace;
 
 /*Main Menu*/
 @eval mainMenuBkgColor org.eclipse.che.ide.api.theme.Style.getMainMenuBkgColor();
+@eval mainMenuSelectedBkgColor org.eclipse.che.ide.api.theme.Style.getMainMenuSelectedBkgColor();
+@eval mainMenuSelectedBorderColor org.eclipse.che.ide.api.theme.Style.getMainMenuSelectedBorderColor();
 @eval mainMenuFontColor org.eclipse.che.ide.api.theme.Style.getMainMenuFontColor();
-@def fontMenuSize 12px;
+@eval mainMenuFontHoverColor org.eclipse.che.ide.api.theme.Style.getMainMenuFontHoverColor();
+@eval mainMenuFontSelectedColor org.eclipse.che.ide.api.theme.Style.getMainMenuFontSelectedColor();
+@def fontMenuSize 11px;
+
+@eval popupBkgColor org.eclipse.che.ide.api.theme.Style.getPopupBkgColor();
+@eval popupBorderColor org.eclipse.che.ide.api.theme.Style.getPopupBorderColor();
+@eval popupShadowColor org.eclipse.che.ide.api.theme.Style.getPopupShadowColor();
+@eval popupHoverColor org.eclipse.che.ide.api.theme.Style.getPopupHoverColor();
+@eval popupHotKeyColor org.eclipse.che.ide.api.theme.Style.getPopupHotKeyColor();
+@def fontPopupSize 10px;
 
 @eval mainFontColor org.eclipse.che.ide.api.theme.Style.getMainFontColor();
 @eval welcomeFontColor org.eclipse.che.ide.api.theme.Style.getWelcomeFontColor();
@@ -181,7 +193,6 @@
 @eval selectCommandActionHoverColor org.eclipse.che.ide.api.theme.Style.getSelectCommandActionHoverColor();
 @eval selectCommandActionIconColor org.eclipse.che.ide.api.theme.Style.getSelectCommandActionIconColor();
 @eval selectCommandActionIconBackgroundColor org.eclipse.che.ide.api.theme.Style.getSelectCommandActionIconBackgroundColor();
-@eval dropDownListSelectionBackground org.eclipse.che.ide.api.theme.Style.getDropDownListSelectionBackground();
 
 /* DialogBox*/
 @eval dialogTopLeft org.eclipse.che.ide.api.theme.Style.getTabBorderColor();
