--- a/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/projecttype/wizard/categoriespage/MainPage.css
+++ b/ide/che-core-ide-app/src/main/resources/org/eclipse/che/ide/projecttype/wizard/categoriespage/MainPage.css
@@ -41,15 +41,15 @@
 
 .labelPosition {
     position: relative;
-    line-height: 29px;
     margin-right: 9px;
     font-weight: bold;
+    margin-top: 10px;
     float: left;
-    font-size: 12px;
 }
 
 .inputFieldPosition {
-    float: right;
+    float: left;
+    width: literal("calc(100% - 12px)");
 }
 
 .labelTitle {
@@ -59,6 +59,7 @@
     font-weight: bold;
     float: left;
     font-size: 15px;
+    color: textFieldColor;
 }
 
 .radioButtonPosition {
@@ -94,6 +95,7 @@
 .label {
     font-weight: bold;
     font-size: 12px;
+    color: textFieldColor;
 }
 
 .horizontalLine {
