--- a/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/ui/style.css
+++ b/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/ui/style.css
@@ -149,8 +149,10 @@
 /* Text fields */
 @def textFieldFontFamily "Lucida Grande", Verdana, Arial;
 @def textFieldFontSize 9px;
-@def wrongBorderBottomColor #d0021b;
-@def validBorderBottomColor #50c602;
+
+/*Menu*/
+@eval menuBackgroundColor org.eclipse.che.ide.api.theme.Style.getMenuBackgroundColor();
+@eval menuBackgroundImage org.eclipse.che.ide.api.theme.Style.getMenuBackgroundImage();
 
 /*Main Menu*/
 @eval mainMenuBkgColor org.eclipse.che.ide.api.theme.Style.getMainMenuBkgColor();
@@ -252,4 +254,10 @@
 @eval outputFontColor org.eclipse.che.ide.api.theme.Style.getOutputFontColor();
 @eval outputLinkColor org.eclipse.che.ide.api.theme.Style.getOutputLinkColor();
 
-
+/*Colors*/
+@eval panelBackgroundColor org.eclipse.che.ide.api.theme.Style.getPanelBackgroundColor();
+@eval primaryHighlightColor org.eclipse.che.ide.api.theme.Style.getPrimaryHighlightColor();
+@eval iconColor org.eclipse.che.ide.api.theme.Style.getIconColor();
+@eval separatorColor org.eclipse.che.ide.api.theme.Style.getSeparatorColor();
+@eval errorColor org.eclipse.che.ide.api.theme.Style.getErrorColor();
+@eval successColor org.eclipse.che.ide.api.theme.Style.getSuccessColor();
