--- a/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/parts/partstack.css
+++ b/ide/che-core-ide-api/src/main/resources/org/eclipse/che/ide/api/parts/partstack.css
@@ -459,6 +459,19 @@
     fill: toolbarIconColor;
 }
 
+.ide-Base-Part-Toolbar-Center-Panel-Project-Title {
+    display: -webkit-flex;
+    display: -moz-flex;
+    display: flex;
+}
+
+.ide-Base-Part-Toolbar-Project-Title {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    min-width: 0;
+}
+
 .ide-Base-Part-Toolbar-Bottom-Button:HOVER {
     -webkit-box-shadow: 0px 0px 2px rgba(50, 50, 50, 1);
     -moz-box-shadow: 0px 0px 2px rgba(50, 50, 50, 1);
