IDEX-2883: Fixed appearing toolbar icons on the FireFox browser

--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/toolbar/toolbar.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/toolbar/toolbar.css
@@ -32,6 +32,10 @@
     display: -moz-box;
 }
 
+.toolbarPanel > div div {
+    float: inherit;
+}
+
 .toolbarPanel a {
     color: outputLinkColor;
 }
