IDEX-2883: Fixed right order action icons on the Firefox

--- a/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/toolbar/toolbar.css
+++ b/ide/che-core-ide-ui/src/main/resources/org/eclipse/che/ide/ui/toolbar/toolbar.css
@@ -32,8 +32,8 @@
     display: -moz-box;
 }
 
-.toolbarPanel > div div {
-    float: inherit;
+.toolbarPanel > div > div {
+    float: left;
 }
 
 .toolbarPanel a {
